--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.11.0",
     "cross-env": "^7.0.3",
-    "elasticsearch": "^16.7.2",
     "fs": "^0.0.1-security",
     "leaflet": "^1.7.1",
     "nuxt": "^2.15.4",
@@ -46,7 +45,8 @@
     "vue-scrollto": "^2.20.0",
     "vue-vis-network": "^1.0.2",
     "vue2-leaflet": "^2.7.0",
-    "vue2-leaflet-markercluster": "^3.1.0"
+    "vue2-leaflet-markercluster": "^3.1.0",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
