--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "yarn lint:js && yarn lint:style",
-    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES NODE_ENV=\"staging\" nuxt generate"
+    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES NODE_ENV=\"production\" nuxt generate"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint",
